[package]
name = "whistle_web"
version = "0.1.0"
authors = ["the Whistle authors"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }
whistle_lexer = { git = "https://github.com/whistle-lang/whistle" }
whistle_parser = { git = "https://github.com/whistle-lang/whistle" }
whistle_common = { git = "https://github.com/whistle-lang/whistle" }
whistle_ast = { git = "https://github.com/whistle-lang/whistle" }
whistle_compiler = { git = "https://github.com/whistle-lang/whistle" }

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = ["wee_alloc"]